Fully functional calculator. Limited function of = sign button and operators buttons so that they only work when appropriate. Added ability to do run-on operations (6 + 6 + 6 + 6) while showing the current value. Fixed the amount of decimals able to be show to 10 so that they don't overflow the screen. No bugs currently noticed

--- a/styles.css
+++ b/styles.css
@@ -70,3 +70,8 @@
     background-color:rgb(156, 153, 153);
 }
 
+p {
+    margin:auto;
+    text-align:center;
+}
+
